@@ -1,3 +1,9 @@
+2007-05-19  Benoît Dejean  <benoit@placenet.org>
+
+	* src/sysinfo.cpp:
+
+	Simplified code with a nice regex.
+
 2007-05-13  Benoît Dejean  <benoit@placenet.org>
 
 	* NEWS:
